# Production_Test_Software

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/flasher/: esptool.py  ncd_flasher.py
src-tauri/resources/flasher/esptool/: loader.py
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: tauri.ts
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/card/: card-content.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
src/lib/components/ui/scroll-area/: index.ts  scroll-area.svelte
src/lib/components/ui/select/: index.ts  select.svelte
src/routes/: +layout.svelte  +page.svelte
