[package]
name = "sensor-programmer"
version = "0.1.3"
description = "NCD Sensor Programmer - Flash, test, and configure ESP32 sensors"
authors = ["NCD"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sensor_programmer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serialport = "4.5"
tokio = { version = "1", features = ["sync", "time"] }
regex = "1"
